--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                 </ul>
             </div>
         </div>
+<p>Check the source code at <a href="https://github.com/tushar-upadhyay/Cowin-vaccine-tracker/">https://github.com/tushar-upadhyay/Cowin-vaccine-tracker</a>
     </center>
 </body>
 
